--- a/index.css
+++ b/index.css
@@ -5,19 +5,47 @@ body {
 }
 
 header {
-  background-color: #FBFFF4;
-  height: 100%;
+  background-color: #c46d2e;
+  flex-shrink: 0;
+  height: 80px;
   width: 100%;
+
 }
 
 main {
-  background-color: #92C9D5;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: #FBFFF4;
   width: 100%;
   height: 100%;
 }
 
+.item {
+  flex-basis: content;
+  height: 100px;
+  width: 100px;
+  margin: 5px;
+  background-color: #FCF2EC;
+}
+
 footer {
-  background-color: #DAEEEF;
-  height: 100%;
+  background-color: #050e0e;
+  flex-shrink: 3;
+  height: 80px;
   width: 100%;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+
+}
+
+.setWidth {
+  flex-basis: 100px;
+  flex-grow: 1;
 }
